umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_bad_valance.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 47
bond_count: 54
sum_formula: C34N5O7Zn
graph6: nhC_GC@?G?_@?@??_?G?@??C??O?C???C??A?@?G@??__?@O??@????_???G???P????C????G????G???@G????@?????G??@?O?????@?C??????????_?????G?????@??????C??????OA????C???????C?????@????????G??????@?
