umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_bold-bonds.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 140
bond_count: 144
sum_formula: C135H3O2
graph6: ~?AKhEG?C@?G?_P?G?@????@??C??G??G?@C??G???O??G???O????????_???????@????G???AG???@????C???????????G?????_????@?????@?????G_????@??????A?????????????G??????O??????G??????A???????W??????????????@???????A???????@????????O???????B?????????????????G????????G????????C????????@????????AG????????C?????????A????????????????????_?????????G?????????@??????????C?????????AG?????????????????????C??????????@???????????G??????????C_??????????????????????@????????????_???????????G???????????H?????????????????????????G????????????G????????????C????????????@????????????AG?????????????_????????????C?????????????@?????????????A_????????????A?????????????@??????????????????????????????G??????????????G??????????????C??????????????@??????????????AG???????????????_??????????????C???????????????@???????????????A_??????????????A???????????????@??????????????????????????????????G????????????????G????????????????C????????????????@????????????????AG?????????????????_????????????????C?????????????????@?????????????????A_????????????????A?????????????????@??????????????????????????????????????G??????????????????G??????????????????C??????????????????@??????????????????AG???????????????????_??????????????????C???????????????????@???????????????????A_?????????????????AA???????????????????@??????????????????????????????????????????G????????????????????G????????????????????C????????????????????@????????????????????AG????????????????????C?????????????????????A?????????????????????O?????????????????????O?????????????????????C?????????????????????@?????????????????????@??????????????????????C??????????????????????C???????????????????????_?
