umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_cid-62301-changed.mol_1.png.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 27
sum_formula: C19O5PS2
graph6: "ZS`A????GA?C?O?O?A??_?AG?GS?G??C??C???O???C???C???B???C????G"
