umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_different stereo 2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 28
sum_formula: C15H2O9
graph6: YhCIG_@GG?_@C?G??G?????C??G??G??E??P???_??O???@??@????O?
